--- a/src/global.scss
+++ b/src/global.scss
@@ -62,6 +62,8 @@
     outline: none !important;
   }
 
+  --main-box-shadow: 0 3px 6px rgb(0 0 0 / 16%) !important;
+
   --ion-background-color: var(--ion-color-white);
   --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
   // --ion-safe-area-top: 16px;
@@ -303,8 +305,8 @@ ion-tab-bar {
   border-radius: 10px;
   height: 20 !important;
 }
-
-.swiper-pagination-bullet {
+//-bullet 
+.swiper-pagination{
   background-color: rgba(var(--ion-color-primary), 0.5) !important;
   height: 10px !important;
   width: 15px !important;
