--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -2147,6 +2147,7 @@ button.swiper-pagination-bullet {
   overflow: hidden;
 }
 :root {
+  --main-box-shadow: 0 3px 6px rgb(0 0 0 / 16%) !important;
   --ion-background-color: var(--ion-color-white);
   --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
   --ion-text-transform: lowercase !important;
@@ -2332,25 +2333,19 @@ ion-tab-bar ion-tab-button ion-icon {
 .alert-head.sc-ion-alert-ios {
   padding: 10px !important;
 }
-.swiper-pagination-bullet-active {
-  background-color: var(--ion-color-primary) !important;
-  height: 10px;
-  width: 30px !important;
-  border-radius: 10px;
-  height: 20 !important;
-}
-.swiper-pagination-bullet {
-  background-color: rgba(var(--ion-color-primary), 0.5) !important;
-  height: 10px !important;
-  width: 15px !important;
-  border-radius: 10px;
-}
 .my-loading-class {
   --background: transparent;
   --spinner-color: var(--ion-color-primary);
 }
 .swiper-zoom-container {
   height: auto !important;
+}
+.transparent-modal {
+  --background: rgba(44, 39, 45, 0.2);
+}
+.transparent-modal::part(content) {
+  -webkit-backdrop-filter: blur(12px);
+          backdrop-filter: blur(12px);
 }
 
 /*# sourceMappingURL=styles.css.map*/
