--- a/src/app/modules/reservation/reservation.page.html
+++ b/src/app/modules/reservation/reservation.page.html
@@ -6,6 +6,14 @@
   class="header-height"
 ></app-header>
 <ion-content class="ion-padding">
+  <div class="calendar-arrows ">
+    <div >
+      <ion-icon name="chevron-back-outline"></ion-icon>
+    </div>
+    <div>
+      <ion-icon name="chevron-forward-outline"></ion-icon>
+    </div>
+  </div>
   <ion-calendar
     lockSwipeToPrev="true"
     [(ngModel)]="dateRange"
