--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu contentId="main-content" menuId="main">
       <ion-header class="header-image ion-no-border">
         <img
-          [ngClass]="currentLanguage == 'ar' ? 'image-right' : 'image-left'"
+          [ngClass]="language == 'ar' ? 'image-right' : 'image-left'"
           src="./../assets/images/512.png"
         />
       </ion-header>
