--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -2170,6 +2170,17 @@ button.swiper-pagination-bullet {
 :root ion-menu-toggle:focus {
   outline: none !important;
 }
+.header-image img {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+}
+.header-image .image-right {
+  border-radius: 0px 0px 80px 0px !important;
+}
+.header-image .image-left {
+  border-radius: 0px 0px 0px 80px !important;
+}
 ion-input {
   --color: var(--ion-color-primary) !important;
 }
