--- a/src/app/modules/reservation/reservation.page.scss
+++ b/src/app/modules/reservation/reservation.page.scss
@@ -8,9 +8,7 @@
   }
 }
 
-<<<<<<< HEAD
 span.button-inner {
-=======
 .calendar-arrows {
   display: flex;
   justify-content: space-between;
@@ -20,9 +18,9 @@ span.button-inner {
     font-size: 22px;
   }
 }
+}
 
 span.button-inner{
->>>>>>> 5c206acf1755ec66ada6152212e12d7999c6adc8
   --background: var(--ion-color-secondary) !important;
 }
 
