--- a/src/app/modules/search-results/search-results.page.scss
+++ b/src/app/modules/search-results/search-results.page.scss
@@ -2,7 +2,7 @@
   margin-bottom: 16px;
   border-radius: 10px;
   border: 1px solid var(--ion-color-primary);
-  box-shadow: 0 3px 6px rgb(0 0 0 / 8%);
+  box-shadow:var(--custom-box-shadow); //0 3px 6px rgb(0 0 0 / 8%);
   padding: 11px;
 
   ion-button{
