--- a/src/global.scss
+++ b/src/global.scss
@@ -46,17 +46,17 @@
 // }
 :root {
   --custom-box-shadow:0 3px 6px rgb(0 0 0 / 16%) !important;
-  --custom-menu: radial-gradient(
-        circle farthest-corner at 10% 20%,
-        rgba(246, 133, 133, 1) 16.3%,
-        rgba(172, 131, 241, 1) 90%
-    );
+  // --custom-menu: radial-gradient(
+  //       circle farthest-corner at 10% 20%,
+  //       rgba(246, 133, 133, 1) 16.3%,
+  //       rgba(172, 131, 241, 1) 90%
+  //   );
   * {
     text-transform: lowercase;
   }
   ion-menu {
-    --ion-background-color: var(--custom-menu);
-   // --ion-backdrop-color: var(--ion-color-dark-black);
+   // --ion-background-color: var(--custom-menu);
+    --ion-backdrop-color: var(--ion-color-dark-black);
   }
 
   ion-menu::part(backdrop) {
