--- a/src/global.scss
+++ b/src/global.scss
@@ -42,27 +42,26 @@
 @import "~swiper/css";
 @import "~swiper/css/bundle";
 
-// ion-menu::part(backdrop) {
-//   background-color: transparent;
-// }
 :root {
-  --custom-box-shadow:0 3px 6px rgb(0 0 0 / 16%) !important;
-  // --custom-menu: radial-gradient(
-  //       circle farthest-corner at 10% 20%,
-  //       rgba(246, 133, 133, 1) 16.3%,
-  //       rgba(172, 131, 241, 1) 90%
-  //   );
   * {
     text-transform: lowercase;
   }
-  ion-menu {
-   // --ion-background-color: var(--custom-menu);
-    --ion-backdrop-color: var(--ion-color-dark-black);
-  }
 
-  ion-menu::part(backdrop) {
-    opacity: 0.1;
-}
+  --custom-box-shadow: 0 3px 6px rgb(0 0 0 / 16%) !important;
+
+  --ion-background-color: var(--ion-color-white);
+  --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
+
+  --ion-text-transform: lowercase !important;
+  --highlight-color-valid: var(--ion-color-secondary);
+  --highlight-color-invalid: var(--ion-color-primary);
+
+  ion-menu {
+    --ion-backdrop-color: var(--ion-color-dark-black);
+    &::part(backdrop) {
+      opacity: 0.1;
+    }
+  }
 
   ion-card {
     box-shadow: var(--custom-box-shadow);
@@ -76,18 +75,6 @@
   ion-menu-toggle:focus {
     outline: none !important;
   }
-
-  //--main-box-shadow: 0 3px 6px rgb(0 0 0 / 16%) !important;
-
-  --ion-background-color: var(--ion-color-white);
-  --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
-  // --ion-safe-area-top: 16px;
-  // --ion-safe-area-right: 16px;
-  // --ion-safe-area-bottom: 16px;
-  // --ion-safe-area-left: 16px;
-  --ion-text-transform: lowercase !important;
-  --highlight-color-valid: var(--ion-color-secondary);
-  --highlight-color-invalid: var(--ion-color-primary);
 }
 
 .header-image {
@@ -105,7 +92,6 @@
     border-radius: 0px 0px 0px 80px !important;
   }
 }
-
 
 ion-input {
   --color: var(--ion-color-primary) !important;
