--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -1,30 +1,19 @@
-<app-header
-  [title]="'details'"
-  [isEditable]="false"
-  [backwardRoute]='"/tabs/main/categories"'
-  [isMain]="false"
-  [categoryId]="itemDetails?.section_id"
-  class="header-height"
-></app-header>
+<app-header [title]="'details'" [isEditable]="false" [backwardRoute]='"/tabs/main/categories"' [isMain]="false"
+  [categoryId]="itemDetails?.section_id" class="header-height"></app-header>
 
-<ion-content class="ion-padding" >
+<ion-content class="ion-padding">
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
+
   <div class="item-image" *ngIf="itemDetails">
     <img [src]="itemDetails?.first_image" />
-    <ion-icon
-      (click)="addToFavourite()"
-      [ngClass]="currentlangauge =='ar' ?'fav-ar':'fav-en' "
-      [src]="itemDetails?.is_favourite ? './../../../assets/icon/fav-active.svg' :'./../../../assets/icon/fav-inactive.svg'"
-    >
+    <ion-icon (click)="addToFavourite()" [ngClass]="currentlangauge =='ar' ?'fav-ar':'fav-en' "
+      [src]="itemDetails?.is_favourite ? './../../../assets/icon/fav-active.svg' :'./../../../assets/icon/fav-inactive.svg'">
     </ion-icon>
 
     <div class="details-container ion-padding">
-      <app-custom-details
-        [ItemDetails]="itemDetails"
-        [isDetailed]="true"
-      ></app-custom-details>
+      <app-custom-details [ItemDetails]="itemDetails" [isDetailed]="true"></app-custom-details>
     </div>
   </div>
 
@@ -70,13 +59,8 @@
       </div>
     </div>
 
-    <swiper
-      #swiper
-      [config]="configSlider"
-      class="custom-swiper"
-      [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
-    >
-      <ng-template swiperSlide *ngFor="let image of itemDetails?.images; let i = index" >
+    <swiper #swiper [config]="configSlider" class="custom-swiper" [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'">
+      <ng-template swiperSlide *ngFor="let image of itemDetails?.images; let i = index">
         <img (click)="openPreview(itemDetails?.images,i)" class="slider-image" [src]="image.image" />
       </ng-template>
     </swiper>
@@ -100,9 +84,10 @@
     </div>
   </div>
 
-  <ion-button expand="block" (click)=" storeOrder()" *ngIf="itemDetails">
+  <ion-button expand="block" (click)="storeOrder()" *ngIf="itemDetails">
     <span class="fn-16 white-color dalel-Bold">
       {{ "reserve now"|translate}}
     </span>
   </ion-button>
+
 </ion-content>
